--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
   "version": 2,
+  "env": {
+      "DB_HOST": "@DB_HOST",
+      "DB_PORT": "@DB_PORT",
+      "DB_DATABASE": "@DB_DATABASE",
+      "DB_USERNAME": "@DB_USERNAME",
+      "DB_PASSWORD": "@DB_PASSWORD",
+      "APP_SECRET": "@APP_SECRET"
+    },
+
   "builds": [
     {
       "src": "src/main.ts",
