--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "migration:generate": "npm run typeorm -- -d ./src/config/typeorm.config-migrations.ts migration:generate ./src/database/migrations/$npm_config_name",
     "migration:create": "npm run typeorm -- migration:create ./src/database/migrations/$npm_config_name",
     "migration:revert": "npm run typeorm -- -d ./src/config/typeorm.config-migrations.ts migration:revert"
-
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -36,6 +35,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "mysql2": "^3.11.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
