--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/dist/main.ts",
+      "dest": "src/main.ts",
       "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     }
   ]
