--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,9 @@ lerna-debug.log*
 pids
 *.pid
 *.seed
+*.lock
 *.pid.lock
+.yarn
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
